// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component should render default form variant 1`] = `
<form
  className="pf-c-form"
  noValidate={true}
/>
`;

exports[`Form component should render horizontal form variant 1`] = `
<form
  className="pf-c-form pf-m-horizontal"
  noValidate={true}
/>
`;
